--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ version = "0.1.0"
 [dependencies]
 cortex-m = "0.5.8"
 cortex-m-semihosting = "0.3.3"
-panic-semihosting = "0.5.3"
 cortex-m-rtfm = "0.5.1"
+embedded-mp3 = { version = "0.1.0", path = "../embedded-mp3" }
+lazy_static = {version="1.4.0", features = ["spin_no_std"]}
+panic-itm = "0.4.1"
 
 [dependencies.stm32f3xx-hal]
 features = ["stm32f303xc", "rt"]
@@ -25,3 +27,6 @@ bench = false
 codegen-units = 1 # better optimizations
 debug = true # symbols are nice and they don't increase the size on Flash
 lto = true # better optimizations
+
+[profile.dev]
+opt-level = 3
