Setting timer works

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,17 @@ cortex-m-semihosting = "0.3.3"
 cortex-m-rtfm = "0.5.1"
 embedded-mp3 = { version = "0.1.0", path = "../embedded-mp3" }
 panic-itm = "0.4.1"
-embedded-sdmmc = "0.3.0"
+embedded-sdmmc = {version="0.3.0", path = "../embedded-sdmmc-rs"}
 log = {"version"="0.4.8", features=["max_level_trace", "release_max_level_warn"]}
 cortex-m-log = {"version"="0.6.1", features=["itm", "log-integration"]}
 
 [dependencies.stm32f3xx-hal]
 features = ["stm32f303xc", "rt"]
 version = "0.4.2"
+
+[dependencies.cast]
+default-features = false
+version = "0.2"
 
 # this lets you use `cargo fix`!
 [[bin]]
