--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ bench = false
 codegen-units = 1 # better optimizations
 debug = true # symbols are nice and they don't increase the size on Flash
 lto = true # better optimizations
+opt-level = 3
 
 [profile.dev]
 opt-level = 3
+
