--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,10 @@ log = {"version"="0.4.8", features=["max_level_trace", "release_max_level_warn"]
 cortex-m-log = {"version"="0.6.1", features=["itm", "log-integration"]}
 mfrc522 = "0.2.0"
 
-[dependencies.stm32f3xx-hal]
-features = ["stm32f303xc", "rt"]
+[dependencies.stm32l4xx-hal]
+features = ["stm32l4x1", "rt"]
 version = "0.5.0"
-path = "../stm32f3xx-hal/"
+path = "../stm32l4xx-hal/"
 
 [dependencies.cast]
 default-features = false
