--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,5 +38,8 @@ lto = true # better optimizations
 opt-level = 3
 
 [profile.dev]
-opt-level = 3
+opt-level = 0
 
+[profile.dev.package."*"]
+opt-level=3
+debug = true # symbols are nice and they don't increase the size on Flash
