--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,16 @@ cortex-m-semihosting = "0.3.3"
 cortex-m-rtic = "0.5.3"
 embedded-mp3 = { version = "0.1.0", git = "https://github.com/ceigel/embedded-mp3-rust.git" }
 panic-itm = "0.4.1"
-log = {"version"="0.4.8", features=["max_level_trace", "release_max_level_warn"]}
+log = {"version"="0.4.8", features=["max_level_info", "release_max_level_info"]}
 cortex-m-log = {"version"="0.6.1", features=["itm", "log-integration"]}
 mfrc522 = "0.2.0"
+nb = "0.1.1"
 
 [dependencies.stm32l4xx-hal]
 features = ["stm32l4x1", "rt"]
 version = "0.6.0"
-git = "https://github.com/stm32-rs/stm32l4xx-hal.git"
+#git = "https://github.com/stm32-rs/stm32l4xx-hal.git"
+path="../stm32l4xx-hal/"
 
 [dependencies.embedded-sdmmc]
 version = "0.3.0"
@@ -42,7 +44,8 @@ lto = true # better optimizations
 opt-level = 3
 
 [profile.dev]
-opt-level = 0
+lto = true # better optimizations
+opt-level=0
 
 [profile.dev.package."*"]
 opt-level="z"
