--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,16 @@ version = "0.1.0"
 cortex-m = "0.6.1"
 cortex-m-semihosting = "0.3.3"
 cortex-m-rtic = "0.5.3"
-embedded-mp3 = { version = "0.1.0", git = "https://github.com/ceigel/embedded-mp3-rust.git" }
 panic-itm = "0.4.1"
 log = {"version"="0.4.8", features=["max_level_info", "release_max_level_info"]}
 cortex-m-log = {"version"="0.6.1", features=["itm", "log-integration"]}
 mfrc522 = "0.2.0"
 nb = "0.1.1"
+
+[dependencies.embedded-mp3]
+version = "0.1.0"
+#git = "https://github.com/ceigel/embedded-mp3-rust.git"
+path="../embedded-mp3/"
 
 [dependencies.stm32l4xx-hal]
 features = ["stm32l4x1", "rt"]
@@ -45,7 +49,7 @@ opt-level = 3
 
 [profile.dev]
 lto = true # better optimizations
-opt-level=0
+opt-level='z'
 
 [profile.dev.package."*"]
 opt-level="z"
