--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ path="../mfrc522"
 
 [dependencies.embedded-mp3]
 version = "0.1.0"
-git = "https://github.com/ceigel/embedded-mp3-rust.git"
-#path="../embedded-mp3/"
+#git = "https://github.com/ceigel/embedded-mp3-rust.git"
+path="../embedded-mp3/"
 
 [dependencies.stm32l4xx-hal]
 features = ["stm32l431", "rt"]
